--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="0; url=http://thecharmedroseyyc.square.site">
+        <meta http-equiv="refresh" content="0; url=https://thecharmedroseyyc.square.site">
         <script type="text/javascript">
-            window.location.href = "http://example.com"
+            window.location.href = "https://thecharmedroseyyc.square.site"
         </script>
         <title>The Charmed Rose YYC</title>
     </head>
     <body>
-        If you are not redirected automatically, follow this <a href='thecharmedroseyyc.square.site'>link</a>.
+        If you are not redirected automatically, follow this <a href='https://thecharmedroseyyc.square.site'>link</a>.
     </body>
 </html>
